--- a/dwmblocks.1
+++ b/dwmblocks.1
@@ -1,3 +1,6 @@
+.\" This file is a part of dwmblocks.
+.\" See COPYING and COPYRIGHT files for corresponding information.
+
 .TH DWMBLOCKS 1 dwmblocks\-VERSION
 .SH NAME
 dwmblocks \- modular status bar for dwm
@@ -7,7 +10,7 @@ dwmblocks \- modular status bar for dwm
 .R [ \fB-p\fR ]
 .SH DESCRIPTION
 dwmblocks is a modular status bar for dwm written in C.  The statusbar
-is made from text output from commandline programs.  Blocks are added
+is made from text output from command-line programs.  Blocks are added
 and removed by editing the \fIconfig.h\fR.
 .SH OPTIONS
 .TP
@@ -20,3 +23,6 @@ Print statusbar to stdout.
 .BR dwm (1),
 .BR dwm60cf (1),
 .BR dmenu (1)
+
+.\" vim:sw=2:ts=2:sts=2:et:cc=72:tw=70
+.\" End of file.
