README: add license note

--- a/README
+++ b/README
@@ -1,6 +1,15 @@
+ABOUT
+=====
+
 This directory contains dwmblocks, modular status bar for dwm.
 It is a fork of torrinfail's dwmblocks.  Original sources can be
 downloaded from:
 
   1. https://github.com/torrinfail/dwmblocks
   2. https://github.com/torrinfail/dwmblocks/archive/a933ce0/dwmblocks-a933ce0.zip
+
+
+LICENSE
+=======
+
+ISC.  See LICENSE file for copyright and license details.
