--- a/README
+++ b/README
@@ -1,15 +1,39 @@
-ABOUT
-=====
+dwmblocks - modular status bar for dwm
+======================================
+dwm is a tiny but modular status bar for dwm.
 
-This directory contains dwmblocks, modular status bar for dwm.
-It is a fork of torrinfail's dwmblocks.  Original sources can be
-downloaded from:
+This dwmblocks distribution is a fork of torrinfail's as of commit
+a933ce0 (Thu Jan 6 2022).  The source code have been adapted to
+compile on DragonFlyBSD.  Added man page.  Added some scripts.
 
-  1. https://github.com/torrinfail/dwmblocks
+The original sources can be downloaded from:
+
+  1.
+    git clone https://github.com/torrinfail/dwmblocks
+    git checkout a933ce0
+
   2. https://github.com/torrinfail/dwmblocks/archive/a933ce0/dwmblocks-a933ce0.zip
 
 
-LICENSE
-=======
+Dependencies
+------------
+Build time:
+- c99 compiler
+- podchecker(1pm) and pod2man(1pm) from perl distribution
+- libX11
 
-ISC.  See LICENSE file for copyright and license details.
+
+Install
+-------
+The shell commands `make; make install` should build and install this
+package.  See `config.mk` file for configuration parameters.
+
+
+License and Copyright
+---------------------
+dwmblocks is licensed through ISC License.
+See LICENSE file for copyright and license details.
+
+
+<!-- vim:ft=markdown:sw=2:ts=2:sts=2:et:cc=72:tw=70
+End of file. -->
