--- a/dwmblocks.1.pod
+++ b/dwmblocks.1.pod
@@ -6,7 +6,7 @@
 
 =head1 NAME
 
-dwmblocks - modular status bar for dwm
+dwmblocks - modular status bar for dwm or similar programs
 
 =head1 SYNOPSIS
 
@@ -14,9 +14,12 @@ B<dwmblocks> [B<-d> I<DELIM>] [B<-p>]
 
 =head1 DESCRIPTION
 
-dwmblocks is a modular status bar for dwm written in C.  The status
-bar is made from text output from command-line programs.  Blocks are
-added and removed by editing F<config.h> file.
+dwmblocks is a tiny utility for generating a status bar for dwm or
+similar programs.  There is an ability to generate status bar to
+stdout, that may be useful for L<dvtm(1)> and similar programs.
+
+The status bar is made from text output from command-line programs.
+Blocks are added and removed by editing F<config.h> file.
 
 =head1 OPTIONS
 
