README: s/ABOUT.*/OVERVIEW/

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-ABOUT dwmblocks
+OVERVIEW
 
 	This directory contains dwmblocks, a tiny utility for generating a
 	status bar for dwm or similar programs.  There is an ability to
