dwmblocks.1: add AUTHORS section

--- a/dwmblocks.1
+++ b/dwmblocks.1
@@ -37,3 +37,10 @@ This keeps it fast, secure and simple.
 .Xr dwm 1 ,
 .Xr dmenu 1 ,
 .Xr st 1
+.Sh AUTHORS
+.Nm
+was written by
+.An torrinfail Aq Mt torrinfail@gmail.com .
+.Pp
+The current implementation was reworked by
+.An Alexandr Savca Aq Mt alexandr.savca89@gmail.com .
