--- a/dwmblocks.1
+++ b/dwmblocks.1
@@ -12,8 +12,9 @@
 .Sh DESCRIPTION
 .Nm
 is a tiny utility for generating a status bar for dwm or similar
-programs.  There is an ability to generate status bar to stdout,
-that may be useful for
+programs.
+There is an ability to generate status bar to stdout, that may be
+useful for
 .Xr dvtm 1
 and similar programs.
 .Pp
@@ -35,8 +36,8 @@ can be customized by creating a custom
 and (re)compiling the source code.
 This keeps it fast, secure and simple.
 .Sh SEE ALSO
-.Xr dwm 1 ,
 .Xr dmenu 1 ,
+.Xr dwm 1 ,
 .Xr st 1
 .Sh AUTHORS
 .Nm
@@ -45,3 +46,5 @@ was written by
 .Pp
 The current implementation was reworked by
 .An Alexandr Savca Aq Mt alexandr.savca89@gmail.com .
+.\" vim: cc=72 tw=70
+.\" End of file.
