--- a/dwmblocks.1
+++ b/dwmblocks.1
@@ -2,13 +2,16 @@
 .Dd August 19, 2023
 .Dt DWMBLOCKS 1
 .Os dwmblocks @VERSION@
+.\" ==================================================================
 .Sh NAME
 .Nm dwmblocks
 .Nd modular status bar for dwm or similar programs
+.\" ==================================================================
 .Sh SYNOPSIS
 .Nm
 .Op Fl d Ar delim
 .Op Fl p
+.\" ==================================================================
 .Sh DESCRIPTION
 .Nm
 is a tiny utility for generating a status bar for dwm or similar
@@ -22,23 +25,27 @@ The status bar is made from text output from command-line programs.
 Blocks are added and removed by editing
 .Pa config.h
 file.
-.Sh OPTIONS
+.Pp
+The options are as follows:
 .Bl -tag -width XXXXXXXX
 .It Fl d Ar delim
 Set blocks delimiter.
 .It Fl p
 Print status bar to stdout.
 .El
+.\" ==================================================================
 .Sh CUSTOMIZATION
 .Nm
 can be customized by creating a custom
 .Pa config.h
 and (re)compiling the source code.
 This keeps it fast, secure and simple.
+.\" ==================================================================
 .Sh SEE ALSO
 .Xr dmenu 1 ,
 .Xr dwm 1 ,
 .Xr st 1
+.\" ==================================================================
 .Sh AUTHORS
 .Nm
 was written by
