dwmblocks.1: specify what config.h is

--- a/dwmblocks.1
+++ b/dwmblocks.1
@@ -38,7 +38,7 @@ Print status bar to stdout.
 .Nm
 can be customized by creating a custom
 .Pa config.h
-and (re)compiling the source code.
+file and (re)compiling the source code.
 This keeps it fast, secure and simple.
 .\" ==================================================================
 .Sh SEE ALSO
