dwmblocks.1: add EXIT STATUS section

--- a/dwmblocks.1
+++ b/dwmblocks.1
@@ -41,6 +41,9 @@ can be customized by creating a custom
 file and (re)compiling the source code.
 This keeps it fast, secure and simple.
 .\" ==================================================================
+.Sh EXIT STATUS
+.Ex -std
+.\" ==================================================================
 .Sh SEE ALSO
 .Xr dmenu 1 ,
 .Xr dwm 1 ,
